free-spins on bt

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3122,7 +3122,7 @@
 
 .free-spins {
   background-image: url("../../img/hands-card-bg.jpg");
-  background-size: contain;
+  background-size: cover;
   background-position: center top; }
   .free-spins__wrapper {
     position: relative;
@@ -3130,7 +3130,7 @@
     padding-bottom: 120px;
     background-size: contain; }
   .free-spins__header-wrapper {
-    width: 700px; }
+    padding-top: 80px; }
   .free-spins__header {
     margin-bottom: 20px;
     font-size: 45px;
@@ -3154,13 +3154,13 @@
     .free-spins__button:hover {
       background-color: #de3137; }
   .free-spins__coin-image-wrapper {
-    position: absolute;
-    top: 25px;
-    right: 0; }
+    padding-top: 30px; }
   .free-spins__coin-image {
     width: 100%; }
 
 .statistics {
+  padding-top: 100px;
+  padding-bottom: 140px;
   background-image: url("../../img/table-bg.jpg");
   background-size: contain;
   background-position: center 0; }
@@ -3199,6 +3199,7 @@
     font-size: 14px;
     line-height: 23px; }
   .statistics__button-wrapper {
+    margin-top: 40px;
     margin-bottom: 55px;
     width: 100%;
     text-align: center; }
@@ -3211,7 +3212,6 @@
     .statistics__button:hover {
       background-color: #de3137; }
   .statistics__text-wrapper {
-    width: 980px;
     margin: 0 auto; }
   .statistics__text {
     font-size: 14px;
