--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3138,6 +3138,7 @@
     font-family: SFUIHeavy;
     text-transform: uppercase; }
   .free-spins__underheader-text {
+    margin-bottom: 30px;
     font-size: 18px;
     line-height: 31px; }
     .free-spins__underheader-text a {
