--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3285,7 +3285,8 @@
   padding-bottom: 80px; }
 
 .conditions--tournament .condition {
-  margin-bottom: 0; }
+  max-width: 300px;
+  margin: 80px auto; }
 
 .condition {
   position: relative;
@@ -3315,7 +3316,6 @@
     margin-bottom: 10px; }
   .condition__description {
     display: block;
-    max-width: 300px;
     font-size: 16px;
     font-family: SFUIMedium; }
     @media (max-width: 768px) {
@@ -3628,13 +3628,10 @@
   background-image: url("../../img/roulette.png");
   background-size: contain; }
 
-.tournament__wrapper {
-  padding-top: 90px; }
-
 .tournament__header {
   position: relative;
   z-index: 1;
-  margin-bottom: 80px;
+  margin: 90px 0;
   text-align: center;
   font-size: 48px;
   font-family: SFUIHeavy;
@@ -3679,21 +3676,23 @@
   font-family: SFUIBold;
   font-size: 14px; }
 
-.tables__wrapper {
-  padding-bottom: 80px; }
-
-.tables__header {
-  margin-bottom: 60px;
-  font-size: 20px;
-  font-family: SFUIBold;
-  text-align: center;
-  text-transform: uppercase; }
-
-.tables__condition-wrapper {
-  margin-bottom: 50px;
-  padding: 30px;
-  border: 3px dotted #464646;
-  text-align: center; }
+.tables {
+  margin-bottom: 80px; }
+  .tables__wrapper {
+    padding-bottom: 80px; }
+  .tables__header {
+    margin-bottom: 60px;
+    font-size: 20px;
+    font-family: SFUIBold;
+    text-align: center;
+    text-transform: uppercase; }
+  .tables__condition {
+    margin: 0; }
+  .tables__condition-wrapper {
+    margin: 60px 0;
+    padding: 30px;
+    border: 3px dotted #464646;
+    text-align: center; }
 
 .prizes-table {
   display: -webkit-box;
@@ -3704,7 +3703,7 @@
           justify-content: space-between;
   margin-bottom: 60px; }
   .prizes-table__column {
-    width: 580px;
+    width: 100%;
     padding-left: 30px;
     padding-right: 30px;
     background-color: #212121;
@@ -3749,10 +3748,7 @@
     font-family: SFUIHeavy; }
 
 .places-tournament {
-  padding-top: 60px;
-  padding-right: 30px;
-  padding-bottom: 35px;
-  padding-left: 30px;
+  padding: 30px;
   background-color: #191919; }
   .places-tournament__header {
     position: relative;
@@ -3784,7 +3780,7 @@
     display: none; }
 
 .places-table {
-  width: 540px;
+  width: 100%;
   border-spacing: 0;
   border: 1px solid #474747;
   font-size: 14px;
