--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3830,7 +3830,7 @@
   padding-top: 60px; }
 
 .levels__header-wrapper {
-  margin-bottom: 80px;
+  margin: 80px 0;
   text-align: center; }
 
 .levels__header {
@@ -3850,11 +3850,16 @@
     position: relative;
     padding: 20px;
     padding-top: 100px; }
+    .level-up-page .level-up-knight .level-up__header-wrapper {
+      top: -60px; }
+    .level-up-page .level-up-knight .level-up__greeting-wrapper {
+      top: 55px;
+      left: 70px; }
     .level-up-page .level-up__header-wrapper {
       position: absolute;
-      top: -60px; }
+      top: -80px; }
   .level-up-page .level-ability {
-    width: 368px; }
+    width: 100%; }
   .level-up-page .level-ability--wide {
     width: 560px; }
 
@@ -3863,7 +3868,8 @@
   .level-up__header-wrapper {
     position: absolute;
     left: 20px;
-    top: -90px; }
+    top: -90px;
+    z-index: 1; }
   .level-up__number {
     position: relative;
     font-size: 150px;
@@ -3877,8 +3883,8 @@
     color: #c2c2c2; }
   .level-up__greeting-wrapper {
     position: absolute;
-    top: 60px;
-    left: 65px; }
+    top: 70px;
+    left: 62px; }
   .level-up__greeting {
     display: block;
     font-size: 26px;
@@ -3894,7 +3900,8 @@
     display: block;
     margin-bottom: 25px;
     font-size: 18px;
-    font-family: SFUIMedium; }
+    font-family: SFUIMedium;
+    z-index: 1; }
   .level-up__ability-wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3959,11 +3966,12 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 250px;
+  width: 100%;
   margin-bottom: 20px;
   padding: 10px;
   border: 1px dashed #005fdc;
-  text-align: center; }
+  text-align: center;
+  min-height: 100px; }
   .level-ability__header {
     width: 100%;
     font-size: 20px;
@@ -3971,7 +3979,7 @@
     text-transform: uppercase; }
   .level-ability__text {
     color: #afaeae;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 23px; }
 
 .level-ability--wide {
@@ -4006,7 +4014,8 @@
   font-size: 14px; }
 
 .levels-ability {
-  background-color: #191919; }
+  background-color: #191919;
+  padding: 50px 0; }
   .levels-ability__wrapper {
     padding-top: 50px;
     padding-bottom: 50px; }
