--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2517,8 +2517,13 @@
       border-bottom: 1px dashed #cccccc; }
 
 .error {
-  background-image: url("../../img/404-bg.png");
-  background-position: calc(50% - 360px) center; }
+  height: 100vh;
+  background-color: #232323; }
+  .error > a {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+    color: #fff; }
   .error__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2537,20 +2542,25 @@
 
 .error-text {
   position: relative;
-  width: 710px;
   text-align: center; }
   .error-text__header {
+    position: relative;
+    z-index: 10;
     margin-bottom: 80px;
     font-size: 40px;
     text-transform: uppercase;
     font-family: SFUIHeavy; }
+    @media (max-width: 768px) {
+      .error-text__header {
+        margin-bottom: 0;
+        font-size: 30px; } }
   .error-text__bg-text {
     position: absolute;
     top: -38px;
     left: 50%;
     -webkit-transform: translatex(-50%);
             transform: translatex(-50%);
-    z-index: -1;
+    z-index: 0;
     font-family: SFUIHeavy;
     font-size: 132px;
     line-height: 132px;
