--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1135,17 +1135,13 @@
   .fixed-bar .language_selector {
     min-width: 140px; }
     .fixed-bar .language_selector__dropdown-menu {
-      position: absolute;
-      bottom: 100%;
-      list-style-type: none;
-      background-color: #313131;
-      opacity: 0;
-      z-index: -1;
-      -webkit-transition: .2s;
-      transition: .2s; }
+      background-color: #303030;
+      border-radius: 0;
+      padding: 0 !important;
+      margin: 0 !important;
+      min-width: 100%;
+      border: 0; }
       .fixed-bar .language_selector__dropdown-menu-item {
-        padding: 10px 20px;
-        min-width: 140px;
         cursor: pointer; }
         .fixed-bar .language_selector__dropdown-menu-item:hover {
           background-color: #414141; }
@@ -1157,16 +1153,14 @@
       opacity: 1;
       z-index: 1; }
   .fixed-bar .localeWrap {
+    width: 100%;
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    font-size: 13px; }
+    font-size: .9em; }
   .fixed-bar .flagContainer {
     display: inline-block;
     width: 22px;
@@ -1190,7 +1184,7 @@
     padding-right: 15px;
     margin-left: 1px;
     border: none;
-    background-color: #313131;
+    background-color: #303030;
     font-family: SFUIRegular;
     color: #999999;
     -webkit-transition: 0.1s;
@@ -1204,7 +1198,7 @@
     .fixed-bar__language img {
       margin-right: 15px; }
     .fixed-bar__language span {
-      font-size: 13px;
+      font-size: .9em;
       line-height: 30px;
       color: #999999;
       -webkit-transition: 0.1s;
