everyweek-cashback adapted

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3269,6 +3269,12 @@
             justify-content: space-between;
     margin-bottom: 75px;
     text-align: center; }
+    @media (max-width: 768px) {
+      .timer__wrapper {
+        width: 100%;
+        max-width: 300px;
+        margin: 0 auto;
+        margin-bottom: 40px; } }
   .timer__numbers-wrapper {
     width: 100px; }
   .timer__numbers {
@@ -3286,21 +3292,23 @@
     font-size: 18px;
     font-family: SFUIRegular; }
 
-.timer--everyweek {
-  width: 450px; }
-  .timer--everyweek .timer__wrapper {
-    width: 100%; }
-  .timer--everyweek .timer__numbers-wrapper:first-child {
-    width: 50px; }
-  .timer--everyweek .timer__numbers {
-    font-size: 48px;
-    line-height: 48px; }
-  .timer--everyweek .timer__separator {
-    font-size: 48px;
-    line-height: 48px; }
-  .timer--everyweek .timer__numbers-text {
-    font-size: 14px;
-    line-height: 14px; }
+.timer--everyweek .timer__wrapper {
+  width: 100%; }
+
+.timer--everyweek .timer__numbers-wrapper:first-child {
+  width: 50px; }
+
+.timer--everyweek .timer__numbers {
+  font-size: 48px;
+  line-height: 48px; }
+
+.timer--everyweek .timer__separator {
+  font-size: 48px;
+  line-height: 48px; }
+
+.timer--everyweek .timer__numbers-text {
+  font-size: 14px;
+  line-height: 14px; }
 
 .conditions {
   padding-top: 35px;
@@ -3386,6 +3394,9 @@
   background-image: url("../../img/money-bg-3.png");
   background-size: cover;
   background-position: top; }
+  @media (max-width: 768px) {
+    .everyweek-cashback {
+      padding-top: 50px; } }
   .everyweek-cashback__wrapper {
     position: relative;
     padding-bottom: 50px;
@@ -3397,6 +3408,10 @@
     font-size: 36px;
     text-transform: uppercase;
     font-family: SFUIHeavy; }
+    @media (max-width: 768px) {
+      .everyweek-cashback__header {
+        margin-bottom: 40px;
+        font-size: 26px; } }
   .everyweek-cashback__back-text {
     position: absolute;
     z-index: 0;
@@ -3407,10 +3422,19 @@
     font-size: 120px;
     color: #151515;
     text-transform: uppercase; }
+    @media (max-width: 768px) {
+      .everyweek-cashback__back-text {
+        top: 50px;
+        font-size: 40px; } }
   .everyweek-cashback__text {
     margin-bottom: 65px;
     font-size: 18px;
     line-height: 36px; }
+    @media (max-width: 768px) {
+      .everyweek-cashback__text {
+        margin-bottom: 40px;
+        font-size: 16px;
+        line-height: 20px; } }
     .everyweek-cashback__text span {
       position: relative; }
       .everyweek-cashback__text span::after {
@@ -3464,6 +3488,9 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
+  @media (max-width: 768px) {
+    .broadcast__text-wrapper {
+      text-align: center; } }
   .broadcast__header {
     margin-bottom: 40px;
     font-size: 20px;
@@ -3509,6 +3536,9 @@
       width: 100%;
       height: 4px;
       background-color: #ed383f; }
+    @media (max-width: 768px) {
+      .cashback-description__header {
+        font-size: 26px; } }
   .cashback-description__bottom {
     display: block;
     float: right;
@@ -3518,6 +3548,10 @@
     font-family: SFUIHeavy;
     font-size: 14px;
     line-height: 22px; }
+    @media (max-width: 768px) {
+      .cashback-description__bottom {
+        padding: 20px 10px;
+        text-align: center; } }
   .cashback-description__text-wrapper {
     width: 800px;
     margin: 0 auto;
